--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "lint": "eslint src/*.ts src/types/*.ts src/api/*.ts src/core/*.ts src/utils/*.ts",
     "size": "size-limit --babili 20KB lib/mobx.js",
     "precommit": "lint-staged",
-    "publish-script": "node scripts/publish.js"
+    "publish-script": "node scripts/publish.js",
+    "debug": "node --nolazy --inspect-brk=9230 ./node_modules/.bin/ts-node src/test/index.ts"
   },
   "repository": {
     "type": "git",
@@ -78,6 +79,7 @@
     "size-limit": "^0.2.0",
     "tape": "^4.2.2",
     "ts-jest": "^22.0.0",
+    "ts-node": "^8.1.0",
     "tslib": "^1.7.1",
     "typescript": "^3.2.1",
     "uglify-es": "^3.3.9"
